--- a/pages/enfermagem.html
+++ b/pages/enfermagem.html
@@ -300,7 +300,7 @@
                                     que consultas tem disponíveis.</p>
                                 <div class="d-flex">
                                     <div class="col-lg-12 col-md-12 ">
-                                        <div class="card-text d-grid">
+                                        <div class="card-text">
                                             <button class="text-dark" id="con-ciru">a) Apoio domiciliário no pós-parto</button> <br>
                                             <button class="text-dark" id="circ-anel">b) Consulta de Enfermagem</button> <br>
                                             <button class="text-dark" id="Sutura">c) Pensos</button>
