--- a/pages/header.html
+++ b/pages/header.html
@@ -1,19 +1,19 @@
-<div class="header__top" style='background-image: url("../img/blog/details/blog-hero11.jpg");'>
+<div class="header__top" style='background-image: url("img/blog/details/blog-hero11.jpg");'>
     <div class="container">
         <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-10">
                 <ul class="header__top__left">
                     <li><a href="#" class="text-white"><img src="../img/icons/contacto.png" class="fa mr-2" width="16"
                                 height="16" alt=""> +258 84 869 7194</a></li>
                     <li><img src="../img/icons/home.png" class="fa mr-2" width="16" height="16" alt=""> Edifício ou
-                        Shopping 24, Avenida 24 de Julho, Loja 20
+                        Shopping 24, Avenida 24 de Julho, Loja 20 (R/C, corredor central ao lado do cabeleireiro)
                     </li>
                     <li><img src="../img/icons/horario.png" class="fa mr-2" width="16" height="16" alt=""> Seg a Sex
                         8:00
                         às 18:00</li>
                 </ul>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-2">
                 <div class="header__top__right">
                     <a href="#"><i class="fa fa-facebook"></i></a>
                     <a href="#"><i class="fa fa-twitter"></i></a>
@@ -70,15 +70,15 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <span>Cirurgia</span>
-                                        <ul class="dropdown-sec">
-                                            <li><a href="cirurgia.html#Cirurgia">Consulta de Cirurgia</a>
-                                            </li>
-                                            <li><a href="cirurgia.html#anel">Circuncisão com anel</a></li>
-                                            <li><a href="cirurgia.html#sutura">Sutura de feridas
-                                                    superficiais</a></li>
-                                        </ul>
-                                        <br>
+                                        <!-- <span>Cirurgia</span>
+                                                                <ul class="dropdown-sec">
+                                                                    <li><a href="cirurgia.html#Cirurgia">Consulta de Cirurgia</a>
+                                                                    </li>
+                                                                    <li><a href="cirurgia.html#anel">Circuncisão com anel</a></li>
+                                                                    <li><a href="cirurgia.html#sutura">Sutura de feridas
+                                                                            superficiais</a></li>
+                                                                </ul>
+                                                                <br> -->
                                         <span>Enfermagem
                                         </span>
                                         <ul class="dropdown-sec">
@@ -94,7 +94,7 @@
                                         <ul class="dropdown-sec">
                                             <li><a href="nutricao.html#A">Nutrição Geral</a></li>
                                             <li><a href="nutricao.html#B">Nutrição Infantil</a></li>
-                                            <li><a href="nutricao.html#C">Diabetes Gestacional</a></li>
+                                            <!-- <li><a href="nutricao.html#C">Diabetes Gestacional</a></li> -->
                                             <li><a href="nutricao.html#D">Pré-conceção</a></li>
                                             <li><a href="nutricao.html#E">Pré-natal</a></li>
                                         </ul>
@@ -114,18 +114,19 @@
                                         <ul class="dropdown-sec">
                                             <li><a href="terapia.html#A">Infantil</a></li>
                                             <li><a href="terapia.html#B">Neurológica</a></li>
-                                            <li><a href="terapia.html#C">Saúde Mental</a></li>
-                                            <li><a href="terapia.html#D">Snoezelen</a></li>
-                                            <li><a href="terapia.html#D">Snoezelen no Pós-Parto</a></li>
+                                            <li><a href="terapia.html#D">Saúde Mental</a></li>
+                                            <li><a href="terapia.html#E">Snoezelen</a></li>
+                                            <li><a href="terapia.html#C">Snoezelen no Pós-Parto</a></li>
                                         </ul>
                                     </li>
                                     <li>
                                         <span>Testes diagnósticos</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Teste do pezinho</a></li>
-                                            <li><a href="#">Teste rápido de amigdalite bacteriana</a></li>
-                                            <li><a href="#">Teste rápido de malária</a></li>
-                                            <li><a href="#">Teste rápido de urina</a></li>
+                                            <li><a href="teste.html#A">Teste do pezinho</a></li>
+                                            <li><a href="teste.html#B">Teste rápido de amigdalite bacteriana</a>
+                                            </li>
+                                            <li><a href="teste.html#D">Teste rápido de malária</a></li>
+                                            <li><a href="teste.html#E">Teste rápido de urina</a></li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -136,10 +137,10 @@
                         <li><a class="arrow" href="../additional-services.html">Vacinação<span
                                     class="dropdown-arrow"></span></a>
                             <ul class="dropdown">
-                                <li><a href="#">Adulto</a></li>
-                                <li><a href="#">Gravidez</a></li>
-                                <li><a href="#">Infantil</a></li>
-                                <li><a href="#">Viajante</a></li>
+                                <li><a href="vacinacao.html#A">Adulto</a></li>
+                                <li><a href="vacinacao.html#B">Gravidez</a></li>
+                                <li><a href="vacinacao.html#D">Infantil</a></li>
+                                <li><a href="vacinacao.html#E">Viajante</a></li>
                             </ul>
                         </li>
                         <!-- Consultas -->
@@ -150,11 +151,12 @@
                                     <li>
                                         <span>A Clínica durante a gravidez</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Amamentação</a></li>
-                                            <li><a href="#">Pediatria pré-natal</a></li>
-                                            <li><a href="#">Nutrição: pré-conceção, pré-natal, Diabetes
-                                                    Gestacional</a></li>
-                                            <li><a href="#">Snoezelen na gravidez</a></li>
+                                            <li><a href="amament-pre-parto.html#pre">Amamentação</a></li>
+                                            <li><a href="pediatria.html#A">Pediatria pré-natal</a></li>
+                                            <li><a href="nutricao.html#D">Nutrição pré-conceção </a></li>
+                                            <li><a href="nutricao.html#E">Nutrição pré-natal</a></li>
+                                            <li><a href="gravidez.html#A">Diabetes Gestacional</a></li>
+                                            <li><a href="gravidez.html#B">Snoezelen na gravidez</a></li>
                                         </ul>
                                     </li>
 
@@ -166,12 +168,9 @@
                                             <li><a href="#">Preparation for Breastfeeding in English</a></li>
                                         </ul>
                                         <br>
-
+                                        <span>Exercício Físico</span>
                                         <ul class="dropdown-sec">
-                                            <span>
-                                                <li><a href="#" class="primary-btn">
-                                                        Galeria de fotos</a></li>
-                                            </span>
+                                            <li><a href="#">Plano de treino para a gravidez</a></li>
                                         </ul>
 
                                     </li>
@@ -183,9 +182,11 @@
                                             <li><a href="#">Pre-natal course in English</a></li>
                                         </ul>
                                         <br>
-                                        <span>Exercício Físico</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Plano de treino para a gravidez</a></li>
+                                            <span>
+                                                <li><a href="#" class="primary-btn">
+                                                        Galeria de fotos</a></li>
+                                            </span>
                                         </ul>
                                     </li>
                                 </ul>
@@ -215,9 +216,9 @@
                             </ul>
                         </li>
                         <a href="#" class="primary-btn" style="
-                                                right: 0;
-                                                position: absolute; margin-top: 0.4rem;
-                                            "> <i class="fa fa-lock"></i> Área Reservada</a>
+                                                                        right: 0;
+                                                                        position: absolute; margin-top: 0.4rem;
+                                                                    "> <i class="fa fa-lock"></i> Área Reservada</a>
                     </ul>
 
                 </nav>
