--- a/pages/pediatria.html
+++ b/pages/pediatria.html
@@ -479,7 +479,7 @@
             DDiv.style.display = 'none';  // Esconde a div pós-parto
             EDiv.style.display = 'none';  // Esconde a div pós-parto
             title.textContent = "a) Consulta de Pediatria Pré-Natal"; // Atualiza o texto para "Cirurgia"
-             img.style.backgroundImage = "url('../img/blog/details/nutri-geral.jpg')"; // Atualiza o texto para "Cirurgia"
+             img.style.backgroundImage = "url('../img/blog/details/diabetes.jpg')"; // Atualiza o texto para "Cirurgia"
             ABtn.classList.add("active");
             BBtn.classList.remove("active");
             CBtn.classList.remove("active");
@@ -497,7 +497,7 @@
             DDiv.style.display = 'none'; // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
             title.textContent = "b) Consulta de Pediatria de Rotina"; // Atualiza o texto para "Pós-parto"
-             img.style.backgroundImage = "url('../img/blog/details/nutri-geral.jpg')"; // Atualiza o texto para "Cirurgia"
+             img.style.backgroundImage = "url('../img/blog/details/blog-hero10.jpg')"; // Atualiza o texto para "Cirurgia"
             ABtn.classList.remove("active");
             BBtn.classList.add("active");
             CBtn.classList.remove("active");
@@ -515,7 +515,7 @@
             DDiv.style.display = 'none';  // Esconde a div Cirurgia
             EDiv.style.display = 'none';  // Esconde a div Cirurgia
             title.textContent = "c) Consulta de Pediatria de Criança Doente"; // Atualiza o texto para "Pós-parto"
-             img.style.backgroundImage = "url('../img/blog/details/nutri-geral.jpg')"; // Atualiza o texto para "Cirurgia"
+             img.style.backgroundImage = "url('../img/blog/details/consultas em criancas.jpg')"; // Atualiza o texto para "Cirurgia"
             ABtn.classList.remove("active");
             BBtn.classList.remove("active");
             CBtn.classList.add("active");
