--- a/pages/terapia.html
+++ b/pages/terapia.html
@@ -481,7 +481,7 @@
             DDiv.style.display = 'none';  // Esconde a div pós-parto
             EDiv.style.display = 'none';  // Esconde a div pós-parto
             title.textContent = "Consulta de Terapia Ocupacional Infantil"; // Atualiza o texto para "Cirurgia"
-            img.style.backgroundImage = "url('../img/blog/details/nutri-geral.jpg')"; // Atualiza o texto para "Cirurgia"
+            img.style.backgroundImage = "url('../img/blog/details/terapia em criancas.jpg')"; // Atualiza o texto para "Cirurgia"
             ABtn.classList.add("active");
             BBtn.classList.remove("active");
              CBtn.classList.remove("active");
@@ -498,7 +498,7 @@
             CDiv.style.display = 'none';  // Esconde a div pós-parto
             DDiv.style.display = 'none'; // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
-            img.style.backgroundImage = "url('../img/blog/details/nutrio-infant.jpg')"; // Atualiza o texto para "Cirurgia"
+            img.style.backgroundImage = "url('../img/blog/details/terapia neurologica.jpg')"; // Atualiza o texto para "Cirurgia"
             title.textContent = "Consulta de Terapia Ocupacional Neurológica"; // Atualiza o texto para "Pós-parto"
             ABtn.classList.remove("active");
             BBtn.classList.add("active");
@@ -516,7 +516,7 @@
             CDiv.style.display = 'none';  // Esconde a div pós-parto
             DDiv.style.display = 'block'; // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
-            img.style.backgroundImage = "url('../img/blog/details/Pré-conceção.jpg')"; // Atualiza o texto para "Cirurgia"
+            img.style.backgroundImage = "url('../img/blog/details/terrapia ocupacional.jpg')"; // Atualiza o texto para "Cirurgia"
             title.textContent = "Consulta de Terapia Ocupacional da Saúde Mental"; // Atualiza o texto para "Pós-parto"
             ABtn.classList.remove("active");
             BBtn.classList.remove("active");
@@ -533,7 +533,7 @@
             CDiv.style.display = 'none';  // Esconde a div pós-parto
             DDiv.style.display = 'none'; // Exibe a div pós-parto
             EDiv.style.display = 'block'; // Exibe a div pós-parto
-            img.style.backgroundImage = "url('../img/blog/details/diabetes.jpg')"; // Atualiza o texto para "Cirurgia"
+            img.style.backgroundImage = "url('../img/blog/details/Snoezelen.png')"; // Atualiza o texto para "Cirurgia"
             title.textContent = "Terapia Snoezelen"; // Atualiza o texto para "Pós-parto"
             ABtn.classList.remove("active");
             BBtn.classList.remove("active");
@@ -549,7 +549,7 @@
             CDiv.style.display = 'block';  // Esconde a div pós-parto
             DDiv.style.display = 'none'; // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
-            img.style.backgroundImage = "url('../img/blog/details/diabetes.jpg')"; // Atualiza o texto para "Cirurgia"
+            img.style.backgroundImage = "url('../img/blog/details/yoga.jpg')"; // Atualiza o texto para "Cirurgia"
             title.textContent = "Terapia Snoezelen no Pós-Parto"; // Atualiza o texto para "Pós-parto"
             ABtn.classList.remove("active");
             BBtn.classList.remove("active");
