--- a/pages/teste.html
+++ b/pages/teste.html
@@ -359,7 +359,7 @@
             DDiv.style.display = 'none';  // Esconde a div pós-parto
             EDiv.style.display = 'none';  // Esconde a div pós-parto
             title.textContent = "a) Teste do pezinho ou rastreio neonatal:"; // Atualiza o texto para "Cirurgia"
-            img.style.backgroundImage = "url('../img/blog/details/nutri-geral.jpg')"; // Atualiza o texto para "Cirurgia"
+            img.style.backgroundImage = "url('../img/blog/details/pezinho.jpg')"; // Atualiza o texto para "Cirurgia"
             ABtn.classList.add("active");
             BBtn.classList.remove("active");
             DBtn.classList.remove("active");
@@ -374,7 +374,7 @@
             BDiv.style.display = 'block'; // Exibe a div pós-parto
             DDiv.style.display = 'none'; // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
-            img.style.backgroundImage = "url('../img/blog/details/nutrio-infant.jpg')"; // Atualiza o texto para "Cirurgia"
+            img.style.backgroundImage = "url('../img/blog/details/amigdalite.jpg')"; // Atualiza o texto para "Cirurgia"
             title.textContent = "b) Teste rápido de amigdalite bacterianas"; // Atualiza o texto para "Pós-parto"
             ABtn.classList.remove("active");
             BBtn.classList.add("active");
@@ -390,7 +390,7 @@
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
             DDiv.style.display = 'block'; // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
-            img.style.backgroundImage = "url('../img/blog/details/Pré-conceção.jpg')"; // Atualiza o texto para "Cirurgia"
+            img.style.backgroundImage = "url('../img/blog/details/teste de malaria.jpg')"; // Atualiza o texto para "Cirurgia"
             title.textContent = "c) Teste rápido de malária"; // Atualiza o texto para "Pós-parto"
             ABtn.classList.remove("active");
             BBtn.classList.remove("active");
@@ -405,7 +405,7 @@
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
             DDiv.style.display = 'none'; // Exibe a div pós-parto
             EDiv.style.display = 'block'; // Exibe a div pós-parto
-            img.style.backgroundImage = "url('../img/blog/details/diabetes.jpg')"; // Atualiza o texto para "Cirurgia"
+            img.style.backgroundImage = "url('../img/blog/details/teste de urina.jpg')"; // Atualiza o texto para "Cirurgia"
             title.textContent = "Teste rápido de urina"; // Atualiza o texto para "Pós-parto"
             ABtn.classList.remove("active");
             BBtn.classList.remove("active");
