--- a/pages/footer.html
+++ b/pages/footer.html
@@ -45,7 +45,7 @@
                     <a href="terapia.html" class="text-white">Terapia ocupacional</a>
                 </p>
                 <p>
-                    <a href="#!" class="text-white">Testes diagnósticos
+                    <a href="teste.html" class="text-white">Testes diagnósticos
                     </a>
                 </p>
             </div>
@@ -75,7 +75,7 @@
                     <a href="../humanitario.html" class="text-white">Trabalho humanitário</a>
                 </p>
                 <p>
-                    <a href="#!" class="text-white">Vacinação </a>
+                    <a href="vacinacao.html" class="text-white">Vacinação </a>
                 </p>
 
                 <p>
@@ -87,7 +87,7 @@
             <!-- Grid column -->
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 text-white">
                 <!-- Links -->
-                <h4 class="text-uppercase fw-bold mb-2">Contact</h4>
+                <h4 class="text-uppercase fw-bold mb-2">Contacto</h4>
                 <p><img src="../img/icons/horario.png" class="fa mr-3" width="20" height="20" alt=""> Seg a Sex
                     8:00 às 18:00</p>
                 <p><img src="../img/icons/email.png" class="fa mr-3" width="20" height="20" alt="">
