--- a/pages/pediatria.html
+++ b/pages/pediatria.html
@@ -532,7 +532,7 @@
             DDiv.style.display = 'block'; // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
             title.textContent = "d) Consulta de Sono Infantil"; // Atualiza o texto para "Pós-parto"
-             img.style.backgroundImage = "url('../img/blog/details/nutri-geral.jpg')"; // Atualiza o texto para "Cirurgia"
+             img.style.backgroundImage = "url('../img/blog/details/sono.jpg')"; // Atualiza o texto para "Cirurgia"
             ABtn.classList.remove("active");
             BBtn.classList.remove("active");
             CBtn.classList.remove("active");
