--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer" style='background-image: url("img/blog/details/blog-hero11.jpg");'>
+fale connoscofale connosco<footer class="footer" style='background-image: url("img/blog/details/blog-hero11.jpg");'>
     <div class="container text-md-start ">
         <!-- Grid row -->
         <div class="row mt-3">
