--- a/info.html
+++ b/info.html
@@ -196,7 +196,7 @@
     </div>
  <a class="float-button" target="_blank" href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
         <i class="fa fa-whatsapp" aria-hidden="true"></i>
-        <span>Fale Conosco!<span>
+        <span>Fale connosco!<span>
       </a>
     <!-- Offcanvas Menu Begin -->
     <div class="offcanvas-menu-overlay"></div>
