--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-Connosco<footer class="footer" style='background-image: url("img/blog/details/blog-hero11.jpg");'>
+<footer class="footer" style='background-image: url("img/blog/details/blog-hero11.jpg");'>
     <div class="container text-md-start ">
         <!-- Grid row -->
         <div class="row mt-3">
@@ -13,7 +13,7 @@ Connosco<footer class="footer" style='background-image: url("img/blog/details/bl
                     física, psicológica e emocionalmente.
                 </p>
                 <div class="load__more">
-                    <a href="info.html" class="primary-btn">Fale conosco</a>
+                    <a href="info.html" class="primary-btn">Fale Connosco</a>
                 </div>
             </div>
             <!-- Grid column -->
