--- a/pages/footer.html
+++ b/pages/footer.html
@@ -39,7 +39,7 @@
                 </p>
 
                 <p>
-                    <a href="pediatria.html" class="text-white"><b>Pediatria</b></a>
+                    <a href="pediatria.html" class="text-white">Pediatria</a>
                 </p>
                 <p>
                     <a href="terapia.html" class="text-white">Terapia ocupacional</a>
