--- a/pages/footer.html
+++ b/pages/footer.html
@@ -95,7 +95,7 @@
                 <p><img src="../img/icons/contacto.png" class="fa mr-3" width="20" height="20" alt="">+258 84
                     869 7194</p>
                 <p><img src="../img/icons/home.png" class="fa mr-3" width="20" height="20" alt="">Edifício ou
-                    Shopping 24, Avenida 24 de Julho.</p>
+                    Shopping 24, Avenida 24 de Julho, Loja 20 (R/C, corredor central ao lado do cabeleireiro)</p>
             </div>
             <!-- Grid column -->
         </div>
@@ -106,7 +106,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="footer__copyright__text">
-                        <p>Copyright &copy;
+                        <p>Copyright &copy;Techzone,Lda.
                             <script>document.write(new Date().getFullYear());</script>
                         </p>
                     </div>
