--- a/footer.html
+++ b/footer.html
@@ -88,7 +88,7 @@
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 text-white">
                 <!-- Links -->
                 <h4 class="text-uppercase fw-bold mb-2">Contacto</h4>
-                <p><img src="img/icons/horario.png" class="fa mr-3" width="20" height="20" alt=""> Seg a Sex
+                <p><img src="img/icons/horario.png" class="fa mr-3" width="20" height="20" alt=""> Seg. a Sex.
                     8:00 às 18:00</p>
                 <p><img src="img/icons/email.png" class="fa mr-3" width="20" height="20" alt="">
                     geral@aclinica-mz.com</p>
