--- a/pages/footer.html
+++ b/pages/footer.html
@@ -106,9 +106,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="footer__copyright__text">
-                        <p>Copyright &copy;Techzone,Lda.
-                            <script>document.write(new Date().getFullYear());</script>
-                        </p>
+                        <p>Copyright ©Techzone,Lda. (2025) Todos os direitos reservados.</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
