--- a/info.html
+++ b/info.html
@@ -267,8 +267,7 @@
                                             Pré e Pós Parto
 
                                             Poderá solicitar qualquer esclarecimento por e-mail para
-                                            dpo@preeposparto.com ou via postal para Rua José da Costa
-                                            Pedreira Nº12, 1750-130 Lisboa</p>
+                                            geral@aclinica-mz.com.</p>
                                         <button type="submit" class="contact_form_submit">Enviar</button>
                                     </div>
                                 </div>
