--- a/index.html
+++ b/index.html
@@ -274,13 +274,13 @@
                         <div class="col-lg-10">
                             <div class="row">
                                 <!-- Texto Principal -->
-                                <div class="col-lg-12 col-md-12">
+                                <div class="col-lg-12 col-md-12 text-center">
                                     <div class="section-title text-white text-center">
                                         <h2>Conheça <i>A Clínica</i></h2>
                                         <!-- <span>A Clínica conta com uma clínica especializada, equipada com uma equipa
                                             multidisciplinar.</span> -->
                                     </div>
-                                    <div class="col-lg-10">
+                                    <div class="col-lg-10 d-inline-block">
                                         <p class="text-justify text-white h5">
                                             <i>A Clínica</i> é uma instituição
                                             de saúde com o foco na família.
@@ -808,11 +808,9 @@
     </section>
 
     <!-- Seção de Rodapé Início -->
-    <footer class="footer" style='background-image: url("img/blog/details/blog-hero11.jpg");'>
         <div id="footer">
-
+         
         </div>
-    </footer>
     <!-- Seção de Rodapé Fim -->
 
 
