--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer" style='background-image: url("img/blog/details/blog-hero11.jpg");'>
+<footer class="footer" style='background-image: url("img/blog/details/blog-hero11.png");'>
     <div class="container text-md-start ">
         <!-- Grid row -->
         <div class="row mt-3">
@@ -42,9 +42,6 @@
                     <a href="pages/pediatria.html" class="text-white"><b>Pediatria</b></a>
                 </p>
                 <p>
-                    <a href="pages/terapia.html" class="text-white">Terapia ocupacional</a>
-                </p>
-                <p>
                     <a href="#!" class="text-white">Testes diagnósticos
                     </a>
                 </p>
@@ -74,9 +71,6 @@
                 <p>
                     <a href="humanitario.html" class="text-white">Trabalho humanitário</a>
                 </p>
-                <p>
-                    <a href="#!" class="text-white">Vacinação </a>
-                </p>
 
                 <p>
                     <a href="#!" class="text-white">Workshop</a>
@@ -104,15 +98,15 @@
     <div class="footer__copyright">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-6">
                     <div class="footer__copyright__text">
-                        <p>Copyright ©Techzone,Lda. (2025) Todos os direitos reservados.</p>
+                        <p>@A Clinica (2025) Todos os direitos reservados. | <b class="text-white underline"> <a class="text-white" href="techzone.com"> Powered by Techzone</a></b></p>
+
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <ul>
-                        <li>Todos os Direitos Reservados</li>
-                        <li>Termos & Uso</li>
+                        <li>Termos de Uso</li>
                         <li>Política de Privacidade</li>
                     </ul>
                 </div>
