--- a/team.html
+++ b/team.html
@@ -241,7 +241,7 @@
                                         <img src="img/team/team-7.jpg">
                                     </div>
                                     <div class="team-content">
-                                        <h4 class="mb-2">Patricia Pérez Ronquillo</h4>
+                                        <h4 class="mb-2">Dra. Patricia P. Ronquillo</h4>
                                         <p>Médica Geral </p>
 
                                     </div>
