--- a/pages/team-sing.html
+++ b/pages/team-sing.html
@@ -26,6 +26,9 @@
     <link rel="stylesheet" href="../css/style.css" type="text/css">
 
     <style>
+        .name{
+            font-size: 46px !important;
+        }
         b {
             color: #d6a294;
             font-weight: 400;
@@ -102,7 +105,7 @@
     <!-- Blog Details Section Begin -->
     <section class="blog-details spad mt-6">
         <div class="container mt-9">
-            <div class="row card-container" style="background-image: url('../img/bg3.png'); background-repeat: no-repeat;background-size: cover;background-position: top center;">
+            <div class="row card-container" style="background-image: url('../img/bg2.png'); background-repeat: no-repeat;background-size: cover;background-position: top center;">
                 <!-- Seção de Texto -->
                 <div class="col-lg-6 col-md-6 col-12 text-section d-flex flex-column justify-content-center">
                     <div class=" m-2">
@@ -110,7 +113,7 @@
                             <div id="icone"></div>
                             <h2 class="text-white ml-2" id="funcao"><img alt="icon"></h2>
                         </div>
-                        <b><h1 class="name" id="nome"></h1></b>
+                        <b><h1 class="name h1" id="nome"></h1></b>
                         <p class="description text-white h4" id="tempo"></p>
                     </div>
                 </div>
@@ -198,7 +201,7 @@
                                         <img src="../img/team/team-7.jpg">
                                     </div>
                                     <div class="team-content">
-                                        <h4 class="mb-2">Patricia Pérez Ronquillo</h4>
+                                        <h4 class="mb-2">Dra. Patricia P. Ronquillo</h4>
                                         <p>Médica Geral </p>
 
                                     </div>
@@ -253,8 +256,8 @@
 
            // Função para exibir a consulta Cirurgia, esconder a pós-parto e atualizar o texto
            function showB() {
-            nome.textContent = "Dra Erika Pereira"; // Atualiza o texto para "Calisto Chemane"
-            icone.style.backgroundImage = "url('../img/icons/Nutricionista.png')";
+            nome.textContent = "Dra. Erika Pereira"; // Atualiza o texto para "Calisto Chemane"
+            icone.style.backgroundImage = "url('../img/icons/nutrição.png')";
             tempo.textContent = "Connosco a ajudar famílias desde 2018."; // Atualiza o texto
             funcao.textContent = "Especialista Nutricionista "; // Atualiza o texto
             paragrafo.innerHTML = "Nutricionista clínica com mais de 10 anos de experiência a fazer atendimento presencial e online. Mestre em Ciências da Nutrição pela Universidade de Chester no Reino Unido, tem vindo a acrescentar ao seu currículo formações mais específicas na área da Nutrição. </br></br> Foi na sua jornada de maternidade que experienciou a introdução alimentar e que ganhou uma nova perspetiva sobre a vida no geral e sobre a educação alimentar em particular. </br></br>  Ensina os seus pacientes a alimentarem-se adequadamente e de forma personalizada para que implementem as recomendações com motivação, foco e consistência de modo a superarem todos os desafios que estes processos implicam e a alcançarem os resultados pretendidos.";
@@ -264,7 +267,7 @@
            }
           // Função para exibir a consulta Cirurgia, esconder a pós-parto e atualizar o texto
           function showC() {
-            nome.textContent = "Dra Inês Claudino"; // Atualiza o texto para "Calisto Chemane"
+            nome.textContent = "Dra. Inês Claudino"; // Atualiza o texto para "Calisto Chemane"
             icone.style.backgroundImage = "url('../img/icons/pediatra .png')";
             tempo.textContent = "Connosco a ajudar famílias desde 2016."; // Atualiza o texto
             paragrafo.innerHTML = "Mãe de uma menina fantástica e Pediatra com mais de 10 anos de experiência. Autora da página de Instagram sobre Pediatria e Parentalidade «Dona Bebé». </br></br> Licenciada em Medicina pela Universidade de Navarra em Espanha. Especialista em Pediatria e sub-especialista em Doenças Infetocontagiosas Pediátricas pelo Hospital La Paz em Madrid, Espanha. Estágio Imunoinfecciologia no Great Ormond Street Hospital for Children em Londres, Reino Unido. Estágio de Infecciologia Tropical no Hospital Central de Maputo. Especialista Universitária em Amamentação Materna pela Universidade Francisco de Vitoria em Madrid, Espanha. Certificada em Primeiros Socorros Pediátricos: atualização 2024 pela Moz First Aid. </br></br> Descobri a minha paixão profissional na atenção primária em Pediatria, onde posso acompanhar as crianças (e as suas famílias) desde a maternidade até à idade adulta. O aleitamento materno foi um dos temas que mais aprofundei nos últimos anos, segura de poder fazer a diferença numa área tão pouco trabalhada em Moçambique.";
@@ -277,7 +280,7 @@
           }
                // Função para exibir a consulta Cirurgia, esconder a pós-parto e atualizar o texto
                function showD() {
-            nome.textContent = "Dra Patricia Pérez Ronquillo"; // Atualiza o texto para "Calisto Chemane"
+            nome.textContent = "Dra. Patricia Pérez Ronquillo"; // Atualiza o texto para "Calisto Chemane"
             icone.style.backgroundImage = "url('../img/icons/medica geral.png')";
             tempo.textContent = "Connosco a ajudar famílias desde 2016."; // Atualiza o texto
             paragrafo.innerHTML = "Médica Geral e a sua nova conselheira. Licenciada em Medicina na Universidade Carlos Juan Finlay em Cuba com menção de honra. Especialista Universitária em Pediatria, Diploma Universitário em Técnicas de Intervenção médica no tratamento psíquico infanto-juvenil e a realizar um Mestrado em Neonatologia pela Universidade Tecnológica Cardenal Herrera em Espanha.  Certificada em Primeiros Socorros Pediátricos: atualização 2024 pela Moz First Aid. </br></br> Toda a minha vida sonhei trabalhar com crianças e, agora que sou mãe de uma menina ainda dou mais valor à Pediatria e ao trabalho desenvolvido com as famílias. Descobri, também, a paixão pela amamentação materna, tema muito interessante do ponto de vista clínico e social.";
