--- a/pages/footer.html
+++ b/pages/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer" style='background-image: url("../img/blog/details/blog-hero11.jpg");'>
+<footer class="footer" style='background-image: url("../img/blog/details/blog-hero11.png");'>
     <div class="container text-md-start ">
         <!-- Grid row -->
         <div class="row mt-3">
