--- a/pages/curso.html
+++ b/pages/curso.html
@@ -166,7 +166,7 @@
     <!-- Header Section End -->
 
     <!-- Services Section Begin -->
-    <section class="services-page spad">
+    <section class="testimonials spad mt-7 mb-4 pb-0">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 order-lg-2">
