--- a/pages/curso.html
+++ b/pages/curso.html
@@ -173,7 +173,7 @@
                     <div class="services__details">
                         <div class="services__details__pic">
                             <div class="services__details__pic">
-                                <img src="../img/bg2.png" alt="">
+                                <img src="../img/blog/details/amame.jpg" alt="">
                                 <div class="services__details__content">
                                     <div class="row w-100">
                                         <div class="col-lg-8 col-md-8 col-sm-8">
