--- a/pages/curso.html
+++ b/pages/curso.html
@@ -83,7 +83,7 @@
             left: 10px;
             width: 26rem;
             max-width: 60%;
-            background-image: url('../IMG/bg0.png');
+            background-image: url('../img/bg0.png');
             padding: 15px;
             border-radius: 8px;
             color: white;
