--- a/pages/curso.html
+++ b/pages/curso.html
@@ -68,6 +68,7 @@
         .services__details__title h3 {
             width: 4rem;
             display: flex;
+            align-items: center;
         }
 
         .services__details__pic img {
@@ -98,7 +99,7 @@
 
         .services__details__title h3,
         .services__details__widget h3 {
-            font-size: 24px;
+            font-size: 32px;
             font-weight: bold;
         }
 
@@ -175,12 +176,12 @@
                             <div class="services__details__pic">
                                 <img src="../img/blog/details/amame.jpg" alt="">
                                 <div class="services__details__content">
-                                    <div class="row w-100">
+                                    <div class="row w-100 align-items-center">
                                         <div class="col-lg-8 col-md-8 col-sm-8">
                                             <div class="services__details__title">
-                                                <span>Facial procedures</span>
-                                                <h3><img src="../img/icons/horario.png" class="fa mr-3" alt=""> Por
-                                                    Marcação</h3>
+                                                <span>Dra. Patrícia Pérez Ronquillo</span>
+                                                <h3><img src="../img/icons/amamentação-white.png" class="fa mr-3"
+                                                        alt="">Marcação</h3>
                                             </div>
                                         </div>
                                         <div class="col-lg-4 col-md-4 col-sm-4 text-end">
@@ -192,7 +193,7 @@
                                                     <i class="fa fa-star"></i>
                                                     <i class="fa fa-star"></i>
                                                 </div>
-                                                <h3>$ 159.50</h3>
+                                                <h4>1h30min</h4>
                                             </div>
                                         </div>
                                     </div>
@@ -366,10 +367,6 @@
                                     <a href="#" class="primary-btn mt-4">Inscrever-me </a>
                                 </div>
                             </div>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque eum alias debitis
-                                suscipit, sint dignissimos minus quisquam recusandae nostrum quas eligendi odit, fugiat
-                                eius rem. Cumque, labore placeat! Velit, vitae. Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit.</p>
                         </div>
                     </div>
                 </div>
@@ -377,7 +374,59 @@
         </div>
     </section>
     <!-- Services Section End -->
-
+    <section class="blog spad">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="blog__item">
+                        <div class="blog__item__pic">
+                            <img src="../img/blog/blog-6.jpg" alt="">
+                        </div>
+                        <div class="blog__item__text">
+                            <h5><a href="#">Here’s how you can get a natural glow this party season</a></h5>
+                            <ul>
+                                <li><img src="../img/team/team 4.jpg" alt=""> John Doe</li>
+                                <li>Dec 06, 2019</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="blog__item">
+                        <div class="blog__item__pic">
+                            <img src="../img/blog/blog-5.jpg" alt="">
+                        </div>
+                        <div class="blog__item__text">
+                            <h5><a href="#">Here’s how you can get a natural glow this party season</a></h5>
+                            <ul>
+                                <li><img src="../img/team/team-7.jpg" alt=""> John Doe</li>
+                                <li>Dec 06, 2019</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="blog__item">
+                        <div class="blog__item__pic">
+                            <img src="../img/blog/blog-4.jpg" alt="">
+                        </div>
+                        <div class="blog__item__text">
+                            <h5><a href="#">Here’s how you can get a natural glow this party season</a></h5>
+                            <ul>
+                                <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
+                                <li>Dec 06, 2019</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-12 text-center">
+                    <div class="load__more">
+                        <a href="#" class="primary-btn">Load More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Seção de Rodapé Início -->
     <footer class="footer" style='background-image: url("../img/blog/details/blog-hero11.jpg");'>
