--- a/pages/curso.html
+++ b/pages/curso.html
@@ -1,13 +1,4 @@
-<meta name="description"
-    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
-<meta name="description"
-    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
-<meta name="description"
-    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
-<meta name="description"
-    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
-<meta name="description"
-    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+<meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
 <!DOCTYPE html>
 <html lang="en">
 
@@ -277,7 +268,7 @@
                                                         </p>
                                                     </div>
                                                     <div class="d-flex align-items-center mb-4">
-                                                        <img src="../img/icons/Workshops.png" class="fas mr-3 " alt=""
+                                                        <img src="../img/icons/Workshop.png" class="fas mr-3 " alt=""
                                                             style="width: 4rem;">
                                                         <p class="text-justify text-white h5">
                                                             Um Workshop sobre Terapia Snoezelen durante a gravidez e
