--- a/pages/header.html
+++ b/pages/header.html
@@ -163,8 +163,8 @@
                                     <li>
                                         <span>Preparação para a Amamentação</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Curso em grupo</a></li>
-                                            <li><a href="#">Curso Individual</a></li>
+                                            <li><a href="curso-amamentacao-grupo.html">Curso em grupo</a></li>
+                                            <li><a href="curso-amamentacao-indiv.html">Curso Individual</a></li>
                                             <li><a href="#">Preparation for Breastfeeding in English</a></li>
                                         </ul>
                                         <br>
