--- a/header.html
+++ b/header.html
@@ -162,8 +162,8 @@
                                     <li>
                                         <span>Preparação para a Amamentação</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Curso em grupo</a></li>
-                                            <li><a href="#">Curso Individual</a></li>
+                                            <li><a href="pages/curso-amamentacao-grupo.html">Curso em grupo</a></li>
+                                            <li><a href="pages/curso-amamentacao-indiv.html">Curso Individual</a></li>
                                             <li><a href="#">Preparation for Breastfeeding in English</a></li>
                                         </ul>
                                         <br>
@@ -171,13 +171,12 @@
                                         <ul class="dropdown-sec">
                                             <li><a href="#">Plano de treino para a gravidez</a></li>
                                         </ul>
-
                                     </li>
                                     <li>
                                         <span>Preparação para o parto</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Curso em grupo</a></li>
-                                            <li><a href="#">Curso Individual</a></li>
+                                            <li><a href="pages/curso-amamentacao-grupo.html">Curso em grupo</a></li>
+                                            <li><a href="pages/curso-amamentacao-indiv.html">Curso Individual</a></li>
                                             <li><a href="#">Pre-natal course in English</a></li>
                                         </ul>
                                         <br>
