--- a/pages/curso-amamentacao-grupo.html
+++ b/pages/curso-amamentacao-grupo.html
@@ -438,10 +438,10 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="blog__item">
                         <div class="blog__item__pic">
-                            <img src="../img/blog/blog-4.jpg" alt="">
+                            <img src="../img/151.jpeg" alt="">
                         </div>
                         <div class="blog__item__text">
-                            <h5><a href="#">Here’s how you can get a natural glow this party season</a></h5>
+                            <h5><a href="#">Curso de Preparação para o Parto em Grupo</a></h5>
                             <ul>
                                 <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
                                 <li>Dec 06, 2019</li>
