--- a/pages/curso-amamentacao-grupo.html
+++ b/pages/curso-amamentacao-grupo.html
@@ -274,7 +274,7 @@
                                                         </p>
                                                     </div>
                                                     <div class="d-flex align-items-center mb-4">
-                                                        <img src="../img/icons/Workshops.png" class="fas mr-3 " alt=""
+                                                        <img src="../img/icons/workshope.png" class="fas mr-3 " alt=""
                                                             style="width: 4rem;">
                                                         <p class="text-justify text-white h5">
                                                             Um Workshop sobre Terapia Snoezelen durante a gravidez e
