--- a/pages/header.html
+++ b/pages/header.html
@@ -177,8 +177,8 @@
                                     <li>
                                         <span>Preparação para o parto</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Curso em grupo</a></li>
-                                            <li><a href="#">Curso Individual</a></li>
+                                            <li><a href="curso-prep-grupo.html">Curso em grupo</a></li>
+                                            <li><a href="curso-prep-indiv.html">Curso Individual</a></li>
                                             <li><a href="#">Pre-natal course in English</a></li>
                                         </ul>
                                         <br>
