--- a/header.html
+++ b/header.html
@@ -175,8 +175,8 @@
                                     <li>
                                         <span>Preparação para o parto</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="pages/curso-amamentacao-grupo.html">Curso em grupo</a></li>
-                                            <li><a href="pages/curso-amamentacao-indiv.html">Curso Individual</a></li>
+                                            <li><a href="pages/curso-prep-grupo.html">Curso em grupo</a></li>
+                                            <li><a href="pages/curso-prep-indiv.html">Curso Individual</a></li>
                                             <li><a href="#">Pre-natal course in English</a></li>
                                         </ul>
                                         <br>
