--- a/team.html
+++ b/team.html
@@ -1,9 +1,20 @@
-<meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><!DOCTYPE html>
+<meta name="description"
+    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+<meta name="description"
+    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+<meta name="description"
+    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+<meta name="description"
+    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+<meta name="description"
+    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+<!DOCTYPE html>
 <html lang="zxx">
 
 <head>
     <meta charset="UTF-8">
-   <meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+    <meta name="description"
+        content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
     <meta name="keywords" content="Aesthetic, Pre-pos, Clinica em Maputo, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -71,7 +82,6 @@
             border-radius: 50%;
             color: beige;
         }
-    
     </style>
     <script>
         fetch('header.html')
@@ -94,10 +104,11 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
- <a class="float-button" target="_blank" href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
+    <a class="float-button" target="_blank"
+        href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
         <i class="fa fa-whatsapp" aria-hidden="true"></i>
         <span>Fale connosco!<span>
-      </a>
+    </a>
     <!-- Offcanvas Menu Begin -->
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
@@ -180,24 +191,13 @@
     <!-- Blog Details Section Begin -->
     <section class="blog-details spad">
         <div class="container">
-            <div class="row mb-4">
-                <div class="col-lg-12 text-center">
-                    <div class="section-title">
-                        <div class="icone">
-                            <img src="img/icons/times .png" alt="">
-                        </div>
-                        <h2>Atendimento ao Paciente</h2>
-                        <!-- <span class="subtitle">A sua opinião é valiosa para nós!</span> -->
-                    </div>
-                </div>
-            </div>
-            <div class="row d-flex justify-content-center mt-8">
+            <div class="row d-flex justify-content-center">
                 <div class="team-area sp">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-6 col-md-4 col-lg-3 single-team">
                                 <div class="inner">
-                                 <a href="pages/team-sing.html#A">
+                                    <a href="pages/team-sing.html#A">
                                         <div class="team-img">
                                             <img src="img/team/team 4.jpg" alt="Member Photo">
                                         </div>
@@ -205,46 +205,46 @@
                                             <h4 class="mb-2">Calisto Chemane</h4>
                                             <p>Atendimento ao Paciente</p>
                                         </div>
-                               </a>
-                                </div>
-                            </div>
-                            <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
-                                <div class="inner">
-                                     <a href="pages/team-sing.html#B">
-                                    <div class="team-img">
-                                        <img src="img/team/team-6.jpg" alt="Member Photo">
-                                    </div>
-                                    <div class="team-content">
-                                        <h4 class="mb-2">Dra. Erika Pereira</h4>
-                                        <p>Nutricionista</p>
-                                    </div>
                                     </a>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
                                 <div class="inner">
-                                      <a href="pages/team-sing.html#C">
-                                    <div class="team-img">
-                                        <img src="img/team/team-5.jpg">
-                                    </div>
-                                    <div class="team-content">
-                                        <h4 class="mb-2">Dra. Inês Claudino</h4>
-                                        <p>Pediatra</p>
-                                    </div>
+                                    <a href="pages/team-sing.html#B">
+                                        <div class="team-img">
+                                            <img src="img/team/team-6.jpg" alt="Member Photo">
+                                        </div>
+                                        <div class="team-content">
+                                            <h4 class="mb-2">Dra. Erika Pereira</h4>
+                                            <p>Nutricionista</p>
+                                        </div>
                                     </a>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
                                 <div class="inner">
-                                     <a href="pages/team-sing.html#D">
-                                    <div class="team-img">
-                                        <img src="img/team/team-7.jpg">
-                                    </div>
-                                    <div class="team-content">
-                                        <h4 class="mb-2">Dra. Patricia P. Ronquillo</h4>
-                                        <p>Médica Geral </p>
+                                    <a href="pages/team-sing.html#C">
+                                        <div class="team-img">
+                                            <img src="img/team/team-5.jpg">
+                                        </div>
+                                        <div class="team-content">
+                                            <h4 class="mb-2">Dra. Inês Claudino</h4>
+                                            <p>Pediatra</p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
+                                <div class="inner">
+                                    <a href="pages/team-sing.html#D">
+                                        <div class="team-img">
+                                            <img src="img/team/team-7.jpg">
+                                        </div>
+                                        <div class="team-content">
+                                            <h4 class="mb-2">Dra. Patricia P. Ronquillo</h4>
+                                            <p>Médica Geral </p>
 
-                                    </div>
+                                        </div>
                                     </a>
                                 </div>
                             </div>
