--- a/pages/curso-amamentacao-grupo.html
+++ b/pages/curso-amamentacao-grupo.html
@@ -279,7 +279,7 @@
                                                         <p class="text-justify text-white h5">
                                                             Um Workshop sobre Terapia Snoezelen durante a gravidez e
                                                             visita à nossa sala Snoezelen, única em Moçambique ou um
-                                                            Worshop sobre Amamentação durante o sono do bebé.
+                                                            Workshop sobre Amamentação durante o sono do bebé.
                                                         </p>
                                                     </div>
                                                     <div class="d-flex align-items-center mb-4">
@@ -302,7 +302,7 @@
                         <div class="services__details__desc">
                             <div class="section-title  text-center mb-4">
                                 <h4 class=" mb-2 mt-6">Temário Curso de Preparação para a Amamentação</h3>
-                                    <span>clique em cada um das seguintes módulos para saber mais</span>
+                                    <span>clique em cada um dos seguintes módulos para saber mais</span>
                             </div>
                             <div class="row d-flex align-items-center ">
                                 <div class="col-lg-6 col-md-6 col-sm-6">
